<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/CreateEventView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/curved_cons"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_event_string"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="15dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:padding="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="@string/event_title_string"
                android:textIsSelectable="false"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="@string/due_on_string"
                android:textIsSelectable="false"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_weight="4" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/NameEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:hint="@string/add_name_of_the_event_string"
                android:inputType="text"
                android:maxLines="1"
                android:minHeight="48dp"
                android:textIsSelectable="true"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/AddDueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="4"
                android:background="@drawable/bg_button_1"
                android:contentDescription="@string/due_on_string"
                android:minHeight="48dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_calendar_month_24"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/event_description_string"
            android:textIsSelectable="false"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/DescriptionEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:hint="@string/add_event_description_and_special_notes_string"
            android:inputType="text"
            android:minHeight="48dp"
            android:textIsSelectable="true"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/AddEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:alpha="0.9"
            android:background="@drawable/bg_button_1"
            android:textAllCaps="false"
            android:text="@string/add_event_string"
            android:textColor="#263238" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ViewEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_all_events_string"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="15dp"/>

        <ListView
            android:id="@+id/EventList"
            android:divider="#00000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_stroke"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="5dp"
            android:animateLayoutChanges="true"
            tools:listitem="@layout/event_list"
            android:scrollbars="none"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/CloseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/close_string"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>