<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="top"
        android:gravity="top"
        android:background="@drawable/bg_curved"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top|center_horizontal"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">

                <ImageView
                    android:id="@+id/BackBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                    android:padding="20dp"
                    android:contentDescription="@string/back_button_string" />
            </LinearLayout>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/ic_logo_main"
                android:contentDescription="@string/app_icon_string" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/sign_up_string"
                android:textAllCaps="true"
                android:autoSizeTextType="uniform"
                android:alpha="1.0"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:text="@string/name_String"
                    android:textIsSelectable="false"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="0dp">

                    <EditText
                        android:id="@+id/FirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/first_name_string"
                        android:inputType="textPersonName"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:textIsSelectable="true"
                        android:autofillHints="FirstName" />

                    <EditText
                        android:id="@+id/SirName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/last_name_string"
                        android:inputType="textPersonName"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:textIsSelectable="true"
                        android:autofillHints="LastName" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:text="@string/email_string"
                    android:textIsSelectable="false"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/EmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="0dp"
                    android:hint="@string/email_id_string"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textIsSelectable="true"
                    android:autofillHints="EmailID" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/create_password_string"
                    android:textIsSelectable="false"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="0dp">

                    <EditText
                        android:id="@+id/NewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/new_password_string"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textIsSelectable="true"
                        android:autofillHints="Password" />

                    <EditText
                        android:id="@+id/ConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/confirm_password_string"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textIsSelectable="true"
                        android:autofillHints="Password" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/account_type_string"
                    android:textIsSelectable="false"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="0dp">

                    <ImageView
                        android:id="@+id/PrivRole"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
                        android:contentDescription="@string/previous_string" />

                    <TextView
                        android:id="@+id/Role"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/student_string"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/NextRole"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                        android:contentDescription="@string/next_string" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/course_string"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/id_number_string"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="0dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:layout_marginEnd="15dp"
                            android:gravity="start">

                            <ImageView
                                android:id="@+id/PrivCourse"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
                                android:contentDescription="@string/previous_string" />

                            <TextView
                                android:id="@+id/Course"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:maxLines="1"
                                android:text="@string/bca_string"
                                android:textAllCaps="true"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/NextCourse"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                                android:contentDescription="@string/next_string" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <EditText
                        android:id="@+id/IDNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/id_string"
                        android:inputType="numberDecimal"
                        android:maxLength="8"
                        android:maxLines="1"
                        android:textIsSelectable="true"
                        android:autofillHints="Numbers" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0"
        android:alpha="0.9"
        android:background="@drawable/bg_button"
        android:text="@string/sign_up_string" />


</LinearLayout>